fixed duplicate resource

--- a/specification/app/resource-manager/Microsoft.App/stable/2025-07-01/LogicAppsExtension.json
+++ b/specification/app/resource-manager/Microsoft.App/stable/2025-07-01/LogicAppsExtension.json
@@ -343,42 +343,45 @@
       "type": "object",
       "allOf": [
         {
-          "$ref": "../../../../../common-types/resource-management/v4/types.json#/definitions/ProxyResource"
-        }
-      ],
-      "properties": {
-        "kind": {
-          "type": "string",
-          "description": "Gets the logic app hybrid workflow kind.",
-          "enum": [
-            "Stateful",
-            "Stateless",
-            "Agentic"
-          ],
-          "x-ms-enum": {
-            "name": "WorkflowKind",
-            "modelAsString": true
-          }
+          "$ref": "../../../../../common-types/resource-management/v5/types.json#/definitions/ProxyResource"
         },
-        "properties": {
-          "description": "Additional workflow properties.",
+        {
           "type": "object",
           "properties": {
-            "files": {
-              "description": "Gets or sets the files.",
-              "$ref": "#/definitions/WorkflowFiles"
+            "kind": {
+              "type": "string",
+              "description": "Gets the logic app hybrid workflow kind.",
+              "enum": [
+                "Stateful",
+                "Stateless",
+                "Agentic"
+              ],
+              "x-ms-enum": {
+                "name": "WorkflowKind",
+                "modelAsString": true
+              }
             },
-            "flowState": {
-              "description": "Gets or sets the state of the workflow.",
-              "$ref": "#/definitions/WorkflowState"
-            },
-            "health": {
-              "$ref": "#/definitions/WorkflowHealth",
-              "description": "Gets or sets workflow health."
+            "properties": {
+              "description": "Additional workflow properties.",
+              "type": "object",
+              "properties": {
+                "files": {
+                  "description": "Gets or sets the files.",
+                  "$ref": "#/definitions/WorkflowFiles"
+                },
+                "flowState": {
+                  "description": "Gets or sets the state of the workflow.",
+                  "$ref": "#/definitions/WorkflowState"
+                },
+                "health": {
+                  "$ref": "#/definitions/WorkflowHealth",
+                  "description": "Gets or sets workflow health."
+                }
+              }
             }
           }
         }
-      }
+      ]
     },
     "WorkflowEnvelopeCollection": {
       "description": "Collection of workflow information elements.",
