--- a/specification/servicebus/resource-manager/Microsoft.ServiceBus/ServiceBus/stable/2021-11-01/migrationconfigs.json
+++ b/specification/servicebus/resource-manager/Microsoft.ServiceBus/ServiceBus/stable/2021-11-01/migrationconfigs.json
@@ -354,7 +354,7 @@
       },
       "allOf": [
         {
-          "$ref": "../../../common/v2/definitions.json#/definitions/ProxyResource"
+          "$ref": "../../common/v2/definitions.json#/definitions/ProxyResource"
         }
       ],
       "description": "Single item in List or Get Migration Config operation"
