--- a/specification/servicebus/resource-manager/Microsoft.ServiceBus/ServiceBus/preview/2023-01-01-preview/DisasterRecoveryConfig.json
+++ b/specification/servicebus/resource-manager/Microsoft.ServiceBus/ServiceBus/preview/2023-01-01-preview/DisasterRecoveryConfig.json
@@ -379,7 +379,7 @@
       },
       "allOf": [
         {
-          "$ref": "../../../common/v2/definitions.json#/definitions/ProxyResource"
+          "$ref": "../../common/v2/definitions.json#/definitions/ProxyResource"
         }
       ],
       "description": "Single item in List or Get Alias(Disaster Recovery configuration) operation"
