--- a/specification/servicebus/resource-manager/Microsoft.ServiceBus/ServiceBus/stable/2021-11-01/DisasterRecoveryConfig.json
+++ b/specification/servicebus/resource-manager/Microsoft.ServiceBus/ServiceBus/stable/2021-11-01/DisasterRecoveryConfig.json
@@ -376,7 +376,7 @@
       },
       "allOf": [
         {
-          "$ref": "../../../common/v2/definitions.json#/definitions/ProxyResource"
+          "$ref": "../../common/v2/definitions.json#/definitions/ProxyResource"
         }
       ],
       "description": "Single item in List or Get Alias(Disaster Recovery configuration) operation"
