add config for new mpg emitter

--- a/specification/billingbenefits/BillingBenefits.Management/tspconfig.yaml
+++ b/specification/billingbenefits/BillingBenefits.Management/tspconfig.yaml
@@ -31,6 +31,9 @@ options:
     experimental-extensible-enums: true
     package-details:
       name: "@azure/arm-billingbenefits"
+  "@azure-typespec/http-client-csharp-mgmt":
+    package-name: "Azure.ResourceManager.BillingBenefits"
+    namespace: "{package-name}"
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/billingbenefits"
     package-dir: "armbillingbenefits"
