--- a/specification/redis/Cache.Management/examples/2024-11-01/RedisCacheAsyncOperationStatus.json
+++ b/specification/redis/Cache.Management/examples/2024-11-01/RedisCacheAsyncOperationStatus.json
@@ -3,7 +3,7 @@
     "operationId": "c7ba2bf5-5939-4d79-b037-2964ccf097da",
     "api-version": "2024-11-01",
     "location": "East US",
-    "subscriptionId": "subid"
+    "subscriptionId": "00000000-0000-0000-0000-000000000000"
   },
   "responses": {
     "200": {
@@ -11,7 +11,7 @@
         "name": "c7ba2bf5-5939-4d79-b037-2964ccf097da",
         "endTime": null,
         "error": null,
-        "id": "/subscriptions/subid/providers/Microsoft.Cache/locations/East US/asyncOperations/c7ba2bf5-5939-4d79-b037-2964ccf097da",
+        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Cache/locations/East US/asyncOperations/c7ba2bf5-5939-4d79-b037-2964ccf097da",
         "percentComplete": null,
         "properties": null,
         "startTime": null,
