response headers revert

--- a/specification/netapp/resource-manager/Microsoft.NetApp/preview/2025-07-01-preview/netapp.json
+++ b/specification/netapp/resource-manager/Microsoft.NetApp/preview/2025-07-01-preview/netapp.json
@@ -2107,14 +2107,6 @@
         "responses": {
           "200": {
             "description": "OK",
-            "headers": {
-              "Location": {
-                "type": "string"
-              },
-              "Azure-AsyncOperation": {
-                "type": "string"
-              }
-            },
             "schema": {
               "$ref": "#/definitions/listQuotaReportResponse"
             }
@@ -5944,12 +5936,6 @@
         "responses": {
           "200": {
             "description": "OK - Bucket updated",
-            "headers": {
-              "Azure-AsyncOperation": {
-                "description": "URL that can be used to check the status of the asynchronous operation",
-                "type": "string"
-              }
-            },
             "schema": {
               "$ref": "#/definitions/bucket"
             }
@@ -6032,16 +6018,6 @@
         "responses": {
           "200": {
             "description": "OK",
-            "headers": {
-              "Location": {
-                "description": "URI to poll the status of the operation",
-                "type": "string"
-              },
-              "Azure-AsyncOperation": {
-                "description": "URL that can be used to check the status of the asynchronous operation",
-                "type": "string"
-              }
-            },
             "schema": {
               "$ref": "#/definitions/bucket"
             }
@@ -6124,17 +6100,7 @@
             }
           },
           "204": {
-            "description": "NoContent -- Resource does not exist.",
-            "headers": {
-              "Location": {
-                "description": "URI to poll the status of the operation",
-                "type": "string"
-              },
-              "Azure-AsyncOperation": {
-                "description": "URL that can be used to check the status of the asynchronous operation",
-                "type": "string"
-              }
-            }
+            "description": "NoContent -- Resource does not exist."
           },
           "default": {
             "description": "Error response describing why the operation failed.",
