--- a/specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-06-01/netapp.json
+++ b/specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-06-01/netapp.json
@@ -7644,6 +7644,7 @@
         "disableShowmount": {
           "type": "boolean",
           "description": "Shows the status of disableShowmount for all volumes under the subscription, null equals false",
+          "x-nullable": true,
           "readOnly": true
         },
         "nfsV4IDDomain": {
