--- a/specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/preview/2025-02-01-preview/appconfiguration.json
+++ b/specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/preview/2025-02-01-preview/appconfiguration.json
@@ -629,6 +629,10 @@
               "$ref": "#/definitions/ConfigurationStore"
             },
             "headers": {
+              "Location": {
+                "type": "string",
+                "description": "The Location header contains the URL where the status of the long running operation can be checked."
+              },
               "Retry-After": {
                 "type": "integer",
                 "format": "int32",
@@ -655,8 +659,8 @@
           }
         },
         "x-ms-long-running-operation-options": {
-          "final-state-via": "original-uri",
-          "final-state-schema": "#/definitions/Azure.ResourceManager.ArmResponse%3CConfigurationStore%3E"
+          "final-state-via": "location",
+          "final-state-schema": "#/definitions/ConfigurationStore"
         },
         "x-ms-long-running-operation": true
       },
@@ -1934,19 +1938,6 @@
     "Azure.ResourceManager.ArmAcceptedLroResponse<\"Resource operation accepted.\", Azure.ResourceManager.{ location: string, retryAfter: int32 }>": {
       "type": "object",
       "description": "Resource operation accepted."
-    },
-    "Azure.ResourceManager.ArmResponse<ConfigurationStore>": {
-      "type": "object",
-      "description": "Azure operation completed successfully.",
-      "properties": {
-        "body": {
-          "$ref": "#/definitions/ConfigurationStore",
-          "description": "The body type of the operation request or response."
-        }
-      },
-      "required": [
-        "body"
-      ]
     },
     "CheckNameAvailabilityParameters": {
       "type": "object",
