--- a/specification/help/resource-manager/Microsoft.Help/Help/tspconfig.yaml
+++ b/specification/help/resource-manager/Microsoft.Help/Help/tspconfig.yaml
@@ -6,10 +6,11 @@ emit:
 options:
   "@azure-tools/typespec-autorest":
     omit-unreachable-types: true
-    emitter-output-dir: "{project-root}/.."
+    emitter-output-dir: "{project-root}"
     azure-resource-provider-folder: "resource-manager"
-    output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/help.json"
+    output-file: "{version-status}/{version}/help.json"
     examples-dir: "{project-root}/examples"
+    arm-types-dir: "{project-root}/../../../../common-types/resource-management"
     emit-lro-options: "all"
   "@azure-tools/typespec-csharp":
     emitter-output-dir: "{output-dir}/{service-dir}/{namespace}"
