--- a/specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/preview/2025-02-01-preview/appconfiguration.json
+++ b/specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/preview/2025-02-01-preview/appconfiguration.json
@@ -2922,6 +2922,8 @@
         "filters": {
           "type": "array",
           "description": "A list of filters used to filter the key-values included in the snapshot.",
+          "minItems": 1,
+          "maxItems": 3,
           "items": {
             "$ref": "#/definitions/KeyValueFilter"
           },
