--- a/specification/storage/Microsoft.BlobStorage/tspconfig.yaml
+++ b/specification/storage/Microsoft.BlobStorage/tspconfig.yaml
@@ -26,6 +26,7 @@ options:
     package-dir: "azure-storage-blob-rest"
     generate-metadata: true
     generate-test: true
+    is-modular-library: true
     package-details:
       name: "@azure-rest/azure-storage-blob"
       description: "Azure.Storage.Blob Service"
