--- a/specification/schemaregistry/data-plane/SchemaRegistry/tspconfig.yaml
+++ b/specification/schemaregistry/data-plane/SchemaRegistry/tspconfig.yaml
@@ -30,7 +30,7 @@ options:
   "@azure-tools/typespec-ts":
     package-dir: "schema-registry"
     generate-metadata: false
-    is-modular-library: false
+    is-modular-library: true
     package-details:
       name: "@azure/schema-registry"
     flavor: azure
