add default value

--- a/specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/preview/2025-02-01-preview/appconfiguration.json
+++ b/specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/preview/2025-02-01-preview/appconfiguration.json
@@ -2082,7 +2082,8 @@
         },
         "disableLocalAuth": {
           "type": "boolean",
-          "description": "Disables all authentication methods other than AAD authentication."
+          "description": "Disables all authentication methods other than AAD authentication.",
+          "default": false
         },
         "softDeleteRetentionInDays": {
           "type": "integer",
@@ -2097,7 +2098,8 @@
         },
         "enablePurgeProtection": {
           "type": "boolean",
-          "description": "Property specifying whether protection against purge is enabled for this configuration store."
+          "description": "Property specifying whether protection against purge is enabled for this configuration store.",
+          "default": false
         },
         "dataPlaneProxy": {
           "$ref": "#/definitions/DataPlaneProxyProperties",
