--- a/specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/preview/2025-02-01-preview/appconfiguration.json
+++ b/specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/preview/2025-02-01-preview/appconfiguration.json
@@ -539,14 +539,9 @@
               "$ref": "#/definitions/ConfigurationStore"
             },
             "headers": {
-              "Azure-AsyncOperation": {
-                "type": "string",
-                "format": "uri",
-                "description": "URL to query for status of the operation."
-              },
               "Location": {
                 "type": "string",
-                "description": "URL to query for the operation result"
+                "description": "The Location header contains the URL where the status of the long running operation can be checked."
               },
               "Retry-After": {
                 "type": "integer",
@@ -703,9 +698,14 @@
           "202": {
             "description": "Resource deletion accepted.",
             "headers": {
+              "Azure-AsyncOperation": {
+                "type": "string",
+                "format": "uri",
+                "description": "URL to query for status of the operation."
+              },
               "Location": {
                 "type": "string",
-                "description": "The Location header contains the URL where the status of the long running operation can be checked."
+                "description": "URL to query for the operation result"
               },
               "Retry-After": {
                 "type": "integer",
@@ -730,7 +730,8 @@
           }
         },
         "x-ms-long-running-operation-options": {
-          "final-state-via": "location"
+          "final-state-via": "location",
+          "final-state-schema": "#/definitions/ConfigurationStore"
         },
         "x-ms-long-running-operation": true
       }
