--- a/specification/hybridkubernetes/HybridKubernetes.Management/tspconfig.yaml
+++ b/specification/hybridkubernetes/HybridKubernetes.Management/tspconfig.yaml
@@ -10,12 +10,9 @@ options:
     azure-resource-provider-folder: "resource-manager"
     output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/connectedClusters.json"
     examples-dir: "{project-root}/examples"
-  "@azure-tools/typespec-csharp":
-    flavor: azure
-    package-dir: "Azure.ResourceManager.Kubernetes"
-    clear-output-folder: true
-    model-namespace: true
-    namespace: "{package-dir}"
+  "@azure-typespec/http-client-csharp-mgmt":
+    package-name: "Azure.ResourceManager.Kubernetes"
+    namespace: "{package-name}"
   "@azure-tools/typespec-python":
     package-dir: "azure-mgmt-hybridkubernetes"
     namespace: "azure.mgmt.hybridkubernetes"
