--- a/specification/advisor/Advisor.Management/tspconfig.yaml
+++ b/specification/advisor/Advisor.Management/tspconfig.yaml
@@ -32,7 +32,7 @@ options:
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/advisor"
     emitter-output-dir: "{output-dir}/armadvisor"
-    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/armadvisor"
     fix-const-stuttering: true
     flavor: "azure"
     generate-samples: true
