--- a/specification/contosowidgetmanager/Contoso.WidgetManager/tspconfig.yaml
+++ b/specification/contosowidgetmanager/Contoso.WidgetManager/tspconfig.yaml
@@ -36,11 +36,11 @@ options:
       name: "@azure-rest/contoso-widgetmanager"
     flavor: azure
   "@azure-tools/typespec-java":
-    emitter-output-dir: "{service-dir}/azure-contoso-widgetmanager"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-contoso-widgetmanager"
     namespace: com.azure.contoso.widgetmanager
     flavor: azure
   "@azure-tools/typespec-go":
-    module: "github.com/Azure/azure-sdk-for-go/{emitter-output-dir}"
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/azmanager"
     service-dir: "sdk/contosowidget"
     emitter-output-dir: "{output-dir}/{service-dir}/azmanager"
     module-version: "0.0.1"
