--- a/specification/programmableconnectivity/Azure.ProgrammableConnectivity/tspconfig.yaml
+++ b/specification/programmableconnectivity/Azure.ProgrammableConnectivity/tspconfig.yaml
@@ -23,7 +23,7 @@ options:
     model-namespace: false
   "@azure-tools/typespec-python":
     package-mode: "dataplane"
-    emitter-output-dir: "{service-dir}/azure-programmableconnectivity"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-programmableconnectivity"
     namespace: "azure.programmableconnectivity"
     flavor: azure
     generate-test: true
@@ -31,7 +31,7 @@ options:
   "@azure-tools/typespec-ts":
     generate-metadata: true
     is-modular-library: false
-    emitter-output-dir: "{service-dir}/programmableconnectivity-rest"
+    emitter-output-dir: "{output-dir}/{service-dir}/programmableconnectivity-rest"
     package-details:
       name: "@azure-rest/programmableconnectivity"
     flavor: azure
