--- a/specification/agricultureplatform/AgriculturePlatform.Management/tspconfig.yaml
+++ b/specification/agricultureplatform/AgriculturePlatform.Management/tspconfig.yaml
@@ -25,26 +25,26 @@ options:
     namespace: "Azure.ResourceManager.AgriculturePlatform"
     emitter-output-dir: "{output-dir}/{service-dir}/{namespace}"
   "@azure-tools/typespec-python":
-    emitter-output-dir: "{service-dir}/azure-mgmt-agricultureplatform"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-mgmt-agricultureplatform"
     namespace: "azure.mgmt.agricultureplatform"
     flavor: "azure"
     generate-test: true
     generate-sample: true
   "@azure-tools/typespec-java":
-    emitter-output-dir: "{service-dir}/azure-resourcemanager-agricultureplatform"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-resourcemanager-agricultureplatform"
     namespace: "com.azure.resourcemanager.agricultureplatform"
     service-name: "Agriculture Platform"
     flavor: "azure"
   "@azure-tools/typespec-ts":
     flavor: "azure"
     experimental-extensible-enums: true
-    emitter-output-dir: "{service-dir}/arm-agricultureplatform"
+    emitter-output-dir: "{output-dir}/{service-dir}/arm-agricultureplatform"
     package-details:
       name: "@azure/arm-agricultureplatform"
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/agricultureplatform"
-    emitter-output-dir: "{service-dir}/armagricultureplatform"
-    module: "github.com/Azure/azure-sdk-for-go/{emitter-output-dir}"
+    emitter-output-dir: "{output-dir}/{service-dir}/armagricultureplatform"
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/armagricultureplatform"
     fix-const-stuttering: true
     flavor: "azure"
     generate-samples: true
