--- a/specification/liftrneon/Neon.Postgres.Management/tspconfig.yaml
+++ b/specification/liftrneon/Neon.Postgres.Management/tspconfig.yaml
@@ -22,19 +22,19 @@ options:
     model-namespace: false
     generate-sample-project: false
   "@azure-tools/typespec-python":
-    emitter-output-dir: "{service-dir}/azure-mgmt-neonpostgres"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-mgmt-neonpostgres"
     namespace: "azure.mgmt.neonpostgres"
     flavor: "azure"
     generate-test: true
     generate-sample: true
   "@azure-tools/typespec-java":
-    emitter-output-dir: "{service-dir}/azure-resourcemanager-neonpostgres"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-resourcemanager-neonpostgres"
     namespace: "com.azure.resourcemanager.neonpostgres"
     service-name: "Neon Postgres"
     flavor: "azure"
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/neonpostgres"
-    emitter-output-dir: "{service-dir}/armneonpostgres"
+    emitter-output-dir: "{output-dir}/{service-dir}/armneonpostgres"
     module: "github.com/Azure/azure-sdk-for-go/{emitter-output-dir}"
     fix-const-stuttering: true
     flavor: "azure"
@@ -44,7 +44,7 @@ options:
     inject-spans: true
   "@azure-tools/typespec-ts":
     experimental-extensible-enums: true
-    emitter-output-dir: "{service-dir}/arm-neonpostgres"
+    emitter-output-dir: "{output-dir}/{service-dir}/arm-neonpostgres"
     flavor: azure
     package-details:
       name: "@azure/arm-neonpostgres"
