--- a/specification/programmableconnectivity/ProgrammableConnectivity.Management/tspconfig.yaml
+++ b/specification/programmableconnectivity/ProgrammableConnectivity.Management/tspconfig.yaml
@@ -12,14 +12,14 @@ options:
     emit-common-types-schema: never
     arm-resource-flattening: true
   "@azure-tools/typespec-python":
-    emitter-output-dir: "{service-dir}/azure-mgmt-programmableconnectivity"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-mgmt-programmableconnectivity"
     namespace: "azure.mgmt.programmableconnectivity"
     flavor: "azure"
     generate-test: true
     generate-sample: true
     package-name: "azure-mgmt-programmableconnectivity"
   "@azure-tools/typespec-java":
-    emitter-output-dir: "{service-dir}/azure-resourcemanager-programmableconnectivity"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-resourcemanager-programmableconnectivity"
     namespace: "com.azure.resourcemanager.programmableconnectivity"
     flavor: "azure"
     service-name: "Programmable Connectivity"
