--- a/specification/purestorage/PureStorage.Block.Management/tspconfig.yaml
+++ b/specification/purestorage/PureStorage.Block.Management/tspconfig.yaml
@@ -21,25 +21,25 @@ options:
     clear-output-folder: true
     namespace: "Azure.ResourceManager.PureStorageBlock"
   "@azure-tools/typespec-python":
-    emitter-output-dir: "{service-dir}/azure-mgmt-purestorageblock"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-mgmt-purestorageblock"
     namespace: "azure.mgmt.purestorageblock"
     flavor: "azure"
     generate-test: true
     generate-sample: true
   "@azure-tools/typespec-java":
-    emitter-output-dir: "{service-dir}/azure-resourcemanager-purestorageblock"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-resourcemanager-purestorageblock"
     namespace: "com.azure.resourcemanager.purestorageblock"
     flavor: "azure"
     service-name: "Pure Storage Block"
   "@azure-tools/typespec-ts":
     experimental-extensible-enums: true
-    emitter-output-dir: "{service-dir}/arm-purestorageblock"
+    emitter-output-dir: "{output-dir}/{service-dir}/arm-purestorageblock"
     flavor: "azure"
     package-details:
       name: "@azure/arm-purestorageblock"
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/purestorageblock"
-    emitter-output-dir: "{service-dir}/armpurestorageblock"
+    emitter-output-dir: "{output-dir}/{service-dir}/armpurestorageblock"
     module: "github.com/Azure/azure-sdk-for-go/{emitter-output-dir}"
     fix-const-stuttering: true
     flavor: "azure"
