--- a/specification/recoveryservicesdatareplication/resource-manager/Microsoft.DataReplication/DataReplication/tspconfig.yaml
+++ b/specification/recoveryservicesdatareplication/resource-manager/Microsoft.DataReplication/DataReplication/tspconfig.yaml
@@ -19,14 +19,14 @@ options:
     namespace: "Azure.ResourceManager.RecoveryServicesDataReplication"
     emitter-output-dir: "{output-dir}/{service-dir}/{namespace}"
   "@azure-tools/typespec-python":
-    emitter-output-dir: "{service-dir}/azure-mgmt-recoveryservicesdatareplication"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-mgmt-recoveryservicesdatareplication"
     namespace: "azure.mgmt.recoveryservicesdatareplication"
     flavor: "azure"
     generate-test: true
     generate-sample: true
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/recoveryservicesdatareplication"
-    emitter-output-dir: "{service-dir}/armrecoveryservicesdatareplication"
+    emitter-output-dir: "{output-dir}/{service-dir}/armrecoveryservicesdatareplication"
     module: "github.com/Azure/azure-sdk-for-go/{emitter-output-dir}"
     fix-const-stuttering: true
     flavor: "azure"
@@ -35,7 +35,7 @@ options:
     head-as-boolean: true
     inject-spans: true
   "@azure-tools/typespec-java":
-    emitter-output-dir: "{service-dir}/azure-resourcemanager-recoveryservicesdatareplication"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-resourcemanager-recoveryservicesdatareplication"
     flavor: "azure"
     namespace: "com.azure.resourcemanager.recoveryservicesdatareplication"
     service-name: "Recovery Services Data Replication"
@@ -48,7 +48,7 @@ options:
     typespec-title-map:
       DataReplicationClient: AzureSiteRecoveryManagementServiceAPI
     experimental-extensible-enums: true
-    emitter-output-dir: "{service-dir}/arm-recoveryservicesdatareplication"
+    emitter-output-dir: "{output-dir}/{service-dir}/arm-recoveryservicesdatareplication"
     flavor: "azure"
     package-details:
       name: "@azure/arm-recoveryservicesdatareplication"
