--- a/specification/relationships/Relationships.Management/tspconfig.yaml
+++ b/specification/relationships/Relationships.Management/tspconfig.yaml
@@ -16,18 +16,18 @@ options:
     model-namespace: true
     namespace: "Azure.ResourceManager.Relationships"
   "@azure-tools/typespec-python":
-    emitter-output-dir: "{service-dir}/azure-mgmt-relationships"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-mgmt-relationships"
     namespace: "azure.mgmt.relationships"
     generate-test: true
     generate-sample: true
     flavor: "azure"
   "@azure-tools/typespec-java":
-    emitter-output-dir: "{service-dir}/azure-resourcemanager-relationships"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-resourcemanager-relationships"
     namespace: "com.azure.resourcemanager.relationships"
     service-name: "relationships"
     flavor: azure
   "@azure-tools/typespec-ts":
-    emitter-output-dir: "{service-dir}/arm-relationships"
+    emitter-output-dir: "{output-dir}/{service-dir}/arm-relationships"
     is-modular-library: true
     flavor: "azure"
     experimental-extensible-enums: true
@@ -35,7 +35,7 @@ options:
       name: "@azure/arm-relationships"
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/relationships"
-    emitter-output-dir: "{service-dir}/armrelationships"
+    emitter-output-dir: "{output-dir}/{service-dir}/armrelationships"
     module: "github.com/Azure/azure-sdk-for-go/{emitter-output-dir}"
     fix-const-stuttering: true
     flavor: "azure"
