--- a/specification/resources/Bicep.Management/tspconfig.yaml
+++ b/specification/resources/Bicep.Management/tspconfig.yaml
@@ -17,25 +17,25 @@ options:
     model-namespace: true
     namespace: "Azure.ResourceManager.Resources.Bicep"
   "@azure-tools/typespec-python":
-    emitter-output-dir: "{service-dir}/azure-mgmt-resource-bicep"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-mgmt-resource-bicep"
     namespace: "azure.mgmt.resource.bicep"
     generate-test: true
     generate-sample: true
     flavor: "azure"
   "@azure-tools/typespec-java":
-    emitter-output-dir: "{service-dir}/azure-resourcemanager-resources-bicep"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-resourcemanager-resources-bicep"
     namespace: "com.azure.resourcemanager.resources.bicep"
     service-name: "Bicep Provider"
     flavor: azure
   "@azure-tools/typespec-ts":
-    emitter-output-dir: "{service-dir}/arm-resourcesbicep"
+    emitter-output-dir: "{output-dir}/{service-dir}/arm-resourcesbicep"
     flavor: azure
     experimental-extensible-enums: true
     package-details:
       name: "@azure/arm-resourcesbicep"
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/resources"
-    emitter-output-dir: "{service-dir}/armbicep"
+    emitter-output-dir: "{output-dir}/{service-dir}/armbicep"
     module: "github.com/Azure/azure-sdk-for-go/{emitter-output-dir}"
     fix-const-stuttering: true
     flavor: "azure"
