--- a/specification/servicenetworking/ServiceNetworking.Management/tspconfig.yaml
+++ b/specification/servicenetworking/ServiceNetworking.Management/tspconfig.yaml
@@ -20,19 +20,19 @@ options:
     use-read-only-status-schema: true
   "@azure-tools/typespec-ts":
     experimental-extensible-enums: true
-    emitter-output-dir: "{service-dir}/arm-servicenetworking"
+    emitter-output-dir: "{output-dir}/{service-dir}/arm-servicenetworking"
     flavor: azure
     package-details:
       name: "@azure/arm-servicenetworking"
   "@azure-tools/typespec-python":
-    emitter-output-dir: "{service-dir}/azure-mgmt-servicenetworking"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-mgmt-servicenetworking"
     namespace: "azure.mgmt.servicenetworking"
     flavor: "azure"
     generate-test: true
     generate-sample: true
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/servicenetworking"
-    emitter-output-dir: "{service-dir}/armservicenetworking"
+    emitter-output-dir: "{output-dir}/{service-dir}/armservicenetworking"
     module: "github.com/Azure/azure-sdk-for-go/{emitter-output-dir}"
     fix-const-stuttering: true
     flavor: "azure"
@@ -41,7 +41,7 @@ options:
     head-as-boolean: true
     inject-spans: true
   "@azure-tools/typespec-java":
-    emitter-output-dir: "{service-dir}/azure-resourcemanager-servicenetworking"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-resourcemanager-servicenetworking"
     namespace: "com.azure.resourcemanager.servicenetworking"
     flavor: "azure"
     service-name: "Traffic Controller"
