--- a/specification/terraform/Microsoft.AzureTerraform.Management/tspconfig.yaml
+++ b/specification/terraform/Microsoft.AzureTerraform.Management/tspconfig.yaml
@@ -18,7 +18,7 @@ options:
     namespace: "Azure.ResourceManager.Terraform"
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/terraform"
-    emitter-output-dir: "{service-dir}/armterraform"
+    emitter-output-dir: "{output-dir}/{service-dir}/armterraform"
     module: "github.com/Azure/azure-sdk-for-go/{emitter-output-dir}"
     fix-const-stuttering: true
     flavor: "azure"
@@ -27,19 +27,19 @@ options:
     head-as-boolean: true
     inject-spans: true
   "@azure-tools/typespec-java":
-    emitter-output-dir: "{service-dir}/azure-resourcemanager-terraform"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-resourcemanager-terraform"
     flavor: "azure"
     namespace: "com.azure.resourcemanager.terraform"
     service-name: "Azure Terraform"
   "@azure-tools/typespec-python":
-    emitter-output-dir: "{service-dir}/azure-mgmt-terraform"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-mgmt-terraform"
     namespace: "azure.mgmt.terraform"
     flavor: "azure"
     generate-test: true
     generate-sample: true
   "@azure-tools/typespec-ts":
     experimental-extensible-enums: true
-    emitter-output-dir: "{service-dir}/arm-terraform"
+    emitter-output-dir: "{output-dir}/{service-dir}/arm-terraform"
     flavor: azure
     package-details:
       name: "@azure/arm-terraform"
