--- a/specification/widget/data-plane/WidgetAnalytics/tspconfig.yaml
+++ b/specification/widget/data-plane/WidgetAnalytics/tspconfig.yaml
@@ -16,7 +16,7 @@ options:
     emitter-output-dir: "{project-root}"
     output-file: "{version-status}/{version}/widgetanalytics.json"
   "@azure-tools/typespec-python":
-    emitter-output-dir: "{service-dir}/azure-widget-analytics"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-widget-analytics"
     namespace: "azure.widget.analytics"
     generate-test: true
     generate-sample: true
@@ -28,18 +28,18 @@ options:
     namespace: "Azure.WidgetAnalytics"
     flavor: azure
   "@azure-tools/typespec-ts":
-    emitter-output-dir: "{service-dir}/widget-analytics-rest"
+    emitter-output-dir: "{output-dir}/{service-dir}/widget-analytics-rest"
     package-details:
       name: "@azure-rest/azure-widget-analytics"
     flavor: azure
   "@azure-tools/typespec-java":
-    emitter-output-dir: "{service-dir}/azure-widget-analytics"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-widget-analytics"
     namespace: com.azure.widget.analytics
     flavor: azure
   "@azure-tools/typespec-go":
     module: "github.com/Azure/azure-sdk-for-go/{emitter-output-dir}"
     service-dir: "sdk/widget-analytics"
-    emitter-output-dir: "{service-dir}/azmanager"
+    emitter-output-dir: "{output-dir}/{service-dir}/azmanager"
     module-version: "0.0.1"
     generate-fakes: true
     inject-spans: true
