--- a/specification/workloads/Workloads.SAPVirtualInstance.Management/tspconfig.yaml
+++ b/specification/workloads/Workloads.SAPVirtualInstance.Management/tspconfig.yaml
@@ -21,25 +21,25 @@ options:
     namespace: "Azure.ResourceManager.WorkloadsSapVirtualInstance"
   "@azure-tools/typespec-ts":
     experimental-extensible-enums: true
-    emitter-output-dir: "{service-dir}/arm-workloadssapvirtualinstance"
+    emitter-output-dir: "{output-dir}/{service-dir}/arm-workloadssapvirtualinstance"
     flavor: azure
     package-details:
       name: "@azure/arm-workloadssapvirtualinstance"
   "@azure-tools/typespec-python":
-    emitter-output-dir: "{service-dir}/azure-mgmt-workloadssapvirtualinstance"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-mgmt-workloadssapvirtualinstance"
     namespace: "azure.mgmt.workloadssapvirtualinstance"
     flavor: "azure"
     generate-test: true
     generate-sample: true
   "@azure-tools/typespec-java":
     service-dir: "sdk/workloadssapvirtualinstance"
-    emitter-output-dir: "{service-dir}/azure-resourcemanager-workloadssapvirtualinstance"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-resourcemanager-workloadssapvirtualinstance"
     namespace: "com.azure.resourcemanager.workloadssapvirtualinstance"
     service-name: "Workloads Sap Virtual Instance"
     flavor: "azure"
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/workloadssapvirtualinstance"
-    emitter-output-dir: "{service-dir}/armworkloadssapvirtualinstance"
+    emitter-output-dir: "{output-dir}/{service-dir}/armworkloadssapvirtualinstance"
     module: "github.com/Azure/azure-sdk-for-go/{emitter-output-dir}"
     fix-const-stuttering: true
     flavor: "azure"
