--- a/specification/app/resource-manager/Microsoft.App/stable/2025-07-01/ContainerApps.json
+++ b/specification/app/resource-manager/Microsoft.App/stable/2025-07-01/ContainerApps.json
@@ -208,6 +208,12 @@
           },
           "Create or Update ManagedBy App": {
             "$ref": "./examples/ContainerApps_ManagedBy_CreateOrUpdate.json"
+          },
+          "Create or Update WorkflowApp Kind": {
+            "$ref": "./examples/ContainerApps_Kind_WorkflowApp_CreateOrUpdate.json"
+          },
+          "Create or Update FunctionApp Kind": {
+            "$ref": "./examples/ContainerApps_Kind_FunctionApp_CreateOrUpdate.json"
           }
         },
         "x-ms-long-running-operation": true,
@@ -698,6 +704,22 @@
             "update"
           ],
           "description": "The fully qualified resource ID of the resource that manages this resource. Indicates if this resource is managed by another Azure resource. If this is present, complete mode deployment will not delete the resource if it is removed from the template since it is managed by another resource."
+        },
+        "kind": {
+          "type": "string",
+          "enum": [
+            "workflowapp",
+            "functionapp"
+          ],
+          "x-ms-mutability": [
+            "read",
+            "create"
+          ],
+          "x-ms-enum": {
+            "name": "kind",
+            "modelAsString": true
+          },
+          "description": "Metadata to represent the container app kind, representing if a container app is workflowapp or functionapp."
         },
         "properties": {
           "description": "ContainerApp resource specific properties",
